infrastructure/ufe-controller/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ufe-controller
spec:
  parentRefs:
    - name: wac-hospital-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ui
      backendRefs:
        - group: ""
          kind: Service
          name: ufe-controller
          namespace: wac-hospital
          port: 80
      
    - matches:
      - path:
          type: Exact
          value: /
      filters:
      - type: RequestRedirect
        requestRedirect:
          path:
            type: ReplaceFullPath
            replaceFullPath: /ui
            scheme: https
            port: 443
